# navigation_server_gui

./: README.md  pyproject.toml  requirements.txt
Kivy tests/: main.py  mytest.kv
src/: Test_gui.py  control_panel.py  mppt_svr_gui.py  mppt_svr_window.py  n2k_can_window.py  nav_data.py  nav_msg_device_gui.py  nav_msg_svr_gui.py  network_control.py  process_window.py  util_functions.py
wx_files/: mppt_gui.wxg
