[tool.poetry]
name = "nav-control-panel"
version = "0.9.0"
description = "Remote control GUI for navigation message sever"
authors = ["Laurent Carré"]
license = "Eclipse 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
guizero = "^1.5.0"
grpcio = "^1.62.1"
protobuf = "^4.25.3"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
