[tool.poetry]
name = "nav-control-panel"
version = "0.9.0"
description = "Remote control GUI for navigation message sever"
authors = ["Laurent Carré"]
license = "Eclipse 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
guizero = "^1.6.0"
grpcio = "^1.62.1"
protobuf = "^5.27"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
